[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internet-historian"
version = "0.1.0"
description = "Quietly preserve the web things you love, forever — a patient, Internet-Archive-only archiving queue."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sara Kay", email = "sara@sarakay.me" }]
keywords = ["archive", "wayback", "internet-archive", "preservation", "spn2", "web-archiving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/ssskay/internet-historian"
Repository = "https://github.com/ssskay/internet-historian"
Issues = "https://github.com/ssskay/internet-historian/issues"

[project.scripts]
internet-historian = "historian:main"
historian = "historian:main"

# Single-file module layout: historian.py is the whole engine. SKILL.md ships
# beside it so `ROOT/SKILL.md` (Path(__file__).parent) resolves in both a
# checkout and an installed wheel — that's what `install-skill` relies on.
[tool.hatch.build.targets.wheel]
only-include = ["historian.py", "SKILL.md"]

[tool.hatch.build.targets.sdist]
include = [
    "historian.py",
    "SKILL.md",
    "config.toml",
    "test_historian.py",
    "README.md",
    "LICENSE",
]
